[java-intentions] ExtendSealedClassFix: ModCommand
IntentionActionWithChoice UI replaced with multi-step ModCommand, as we don't have IntentionActionWithChoice in ModCommand API, and it's unclear whether it's a good idea, and how to implement it better

GitOrigin-RevId: a702bc672b56f4c51dd7e7b01cf5ee0ded457805